<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#000000"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title"
        android:id="@+id/textView_title"
        android:textStyle="bold|italic"
        android:fontFamily="serif"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginBottom="10sp"
        android:background="#ffffff" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_title"
        android:id="@+id/layout_content"
        android:background="#ffffff">

        <TableLayout
            android:layout_height="wrap_content"
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:textColor="#000000"
            >
            <TableRow android:layout_marginBottom="5sp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/description"
                    android:id="@+id/textView_description"
                    android:layout_span="2"
                    android:singleLine="false"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    />
            </TableRow>
            <TableRow android:layout_marginBottom="5sp">
                <TextView android:id="@+id/tvCleaningDot1"
                    android:layout_height="wrap_content"
                    android:text="•"
                    android:singleLine="false"
                    android:textColor="#000000"
                    android:layout_marginRight="5sp" />
                <TextView android:id="@+id/howto_1"
                    android:layout_height="wrap_content"
                    android:text="@string/howto_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:textColor="#000000"
                    />
            </TableRow>
            <TableRow android:layout_marginBottom="5sp">
                <TextView android:id="@+id/tvCleaningDot2"
                    android:layout_height="wrap_content"
                    android:text="•"
                    android:singleLine="false"
                    android:textColor="#000000"
                    />
                <TextView android:id="@+id/howto_2"
                    android:layout_height="wrap_content"
                    android:text="@string/howto_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="false"
                    android:textColor="#000000"
                    />
            </TableRow>
        </TableLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_io"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/io"
        android:textStyle="bold"
        android:textColor="#ff0000"
        android:layout_marginTop="20sp"
        android:layout_below="@+id/layout_content"
        android:background="#ffffff" />
    />


</RelativeLayout>
